2008-01-02  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_setJobHoldUntil): Fixed typo
	(Ubuntu #179520).

2007-12-17  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.32.

2007-12-14  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinter): Don't deallocate
	the Python objects that are our arguments.

2007-12-11  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (Option_getChoices): Don't leak Unicode objects.
	(Option_getChoices): Add 'marked' attribute, based on patch by
	Romain Jacquet.

2007-11-30  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (do_printer_request): Fixed debugging output.

2007-11-27  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_cancelJob): Use job-id instead of
	job-uri.
	(Connection_getPrinterAttributes): New uri keyword to allow
	non-CUPS URIs.

2007-11-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): Fixed
	job-sheets-default tuple.

2007-11-22  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.31.

2007-11-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDocument): New method.
	* cupsmodule.h: Check for CUPS 1.4.

2007-11-21  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDefault): New method.

	* cupsmodule.c (cups_require): Don't read uninitialised memory.

	* cupsconnection.c (Connection_printTestPage): Don't use
	uninitialised variables (bug #390431).

2007-11-19  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.30.

2007-11-19  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinter): Fixed typo.
	(Connection_addPrinter): Fixed double-free.
	(Connection_getDests): Handle there being no default printer.

2007-11-15  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.29.

2007-11-15  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDests): Don't leak each
	destobj.
	(build_list_from_attribute_strings): Don't leak each string