@@ -1,3 +1,8 @@
+2008-01-23  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_cancelJob): Revert back to using
+	job-uri since it is a required attribute.
+
 2008-01-02  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_setJobHoldUntil): Fixed typo
